deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-sample
  namespace: api-sample
  labels:
    app: api-sample
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-sample
  template:
    metadata:
      labels:
        app: api-sample
    spec:
      containers:
      - name: api-sample
        image: api-sample:0.1.0
        ports:
        - containerPort: 8000
