deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-sample-service
  labels:
    app: api-sample
spec:
  selector:
    app: api-sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
