deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-sample-ingress
  namespace: api-sample
spec:
  ingressClassName: nginx
  rules:
  - host: api-sample.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
